@@ -156,3 +156,12 @@
   float: left;
 }
 
+#imgp_relbox_control {
+  clear: both;
+}
+
+#imgp_relbox_show_control {
+}
+
+#imgp_relbox_link_control {
+}
