@@ -305,6 +305,7 @@ function theme_imagepicker_iframe($content, $img='', $public=FALSE) {
         'isFCKeditor' => (module_exists('fckeditor') ? 'yes' : 'no' ),
         'isWysiwyg' => (module_exists('wysiwyg') ? 'yes' : 'no' ),
         'use_cssbox' => ((variable_get('imagepicker_use_cssbox', 0) && ! isset($user->imagepicker_use_cssbox) ) ? 1 : (variable_get('imagepicker_use_cssbox', 0) && isset($user->imagepicker_use_cssbox) && $user->imagepicker_use_cssbox) ? 1 : 0),
+        'use_relbox' => ((variable_get('imagepicker_use_relbox', 0) && ! isset($user->imagepicker_use_relbox) ) ? 1 : (variable_get('imagepicker_use_relbox', 0) && isset($user->imagepicker_use_relbox) && $user->imagepicker_use_relbox) ? 1 : 0),
         'default_align_show' => ((variable_get('imagepicker_default_align_show', 1) && ! isset($user->imagepicker_default_align_show) ) ? 1 : (variable_get('imagepicker_default_align_show', 1) && isset($user->imagepicker_default_align_show) && $user->imagepicker_default_align_show) ? 1 : 0),
         'default_fleft' => (isset($user->imagepicker_default_fleft) ? $user->imagepicker_default_fleft : variable_get('imagepicker_default_fleft', 'style="float: left"')),
         'default_fright' => (isset($user->imagepicker_default_fright) ? $user->imagepicker_default_fright : variable_get('imagepicker_default_fright', 'style="float: right"')),
@@ -640,6 +641,13 @@ function theme_imagepicker_image_form($form) {
     $form['presets_link']['#prefix'] = '<div id="imgp_presets_link_control">';
     $form['presets_link']['#suffix'] = '</div></div>';
   }
+  if (isset($form['relbox'])) {
+    $form['relbox']['#prefix'] = '<div id="imgp_relbox_control"><div id="imgp_relbox_show_control">';
+    $form['relbox']['#suffix'] = '</div>';
+    $form['linkhide']['#prefix'] = '<div id="imgp_relbox_link_control">';
+    $form['linkhide']['#suffix'] = '</div></div>';
+  }
+
   $output .= drupal_render($form);
   return $output;
 }
