@@ -1,3 +1,7 @@
+Image Picker for D6 in 6.x-2.x, 20011-06-08
+------------------------------------
+by hutch, added rel for colorbox support
+
 Image Picker for D6 in 6.x-2.x, 20011-06-06
 ------------------------------------
 by hutch, added imagecache support
